--- a/Layihe/login.css
+++ b/Layihe/login.css
@@ -19,13 +19,12 @@ body::after{
     z-index: -1;
 }
 .login-container{
-    width: 850px;
+    width: 900px;
     height: 450px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform:translate(-50%,-50%);
-    background-color: rgb(200, 195, 195);
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -33,11 +32,17 @@ body::after{
     border-radius: 10px;
 }
 .login{
-    width: 350px;
-    padding: 15px;
+    width: 470px;
+    height: 472px;
+    padding: 20px 30px 10px 35px;
     border-radius: 10px;
     background-color: white;
-    padding-left:30px;
+
+}
+h1{
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 5px;
 }
 p{
     color: rgb(182, 177, 177);
@@ -60,14 +65,14 @@ p{
 .mail input,.password input{
     width: 270px;
     height: 40px;
-    border-radius: 10px;
-    padding-left: 10px;
-    border: 1px solid;
+    padding-left: 5px;
+    border: none;
+    border-bottom: 2px solid gray;
 }
 .chk{
     display: flex;
-    gap: 7px;
-    margin-top: 7px;
+    gap: 5px;
+    margin-top: 10px;
 }
 .chk p{
     font-size: .8rem;
@@ -77,7 +82,7 @@ a{
     text-decoration: none;
 }
 button{
-    width: 270px;
+    width: 275px;
     border-radius: 10px;
     padding: 10px;
     background-color:blueviolet;
@@ -123,7 +128,7 @@ button:hover{
     font-size: .8rem;
 }
 .pic img{
-   width: 500px;
+   width: 520px;
    height: 420px;
 }
 #exit{
